--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,22 @@
 # Site settings
-title: Mauricio Urraco
+title: Camila Bisio
 description: Jekyll Theme Minimal Resume
 # baseurl: "" # the subpath of your site, e.g. /blog
 # url: "localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
-username: Mauricio Urraco
-user_description: I'm a Software Engineer from Argentina, always searching for the next challenge; no task is too scary nor too difficult. Lately I have been immersed in world of Giving Circles working with Grapevine, a California based startup trying to improve the world through collaborative giving. I'm the first engineer they hired to work on the platform.
+username: Camila Bisio
+user_description: I'm a Software Engineer 
 user_title: Software Engineer
-email: mauriurraco@gmail.com
+email: camibisiob@hotmail.com
 # twitter_username: lorem_ipsum
-instagram_username: mauriciourraco7
-facebook_username: mauricio.urraco
-linkedin_username: murraco
-github_username:  murraco
+# instagram_username: mauriciourraco7
+# facebook_username: mauricio.urraco
+linkedin_username: camila-bisio
+github_username:  cbisio
 # medium_username: lorem_ipsum
 # medium_url: lorem_ipsum.medium.com
 # gplus_username:  lorem_ipsum
+spotify_username: camila6
 
 exclude: ['package.json', 'src' , 'node_modules']
